# evolutionary-robotics

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cpp
img/: exact_driving.drawio  light_intensity.py
include/: ann.h  controller.h  light.h  map.h  robot.h  types.h  utils.h
src/: ann.cpp  controller.cpp  light.cpp  map.cpp  robot.cpp  utils.cpp
